--- a/recipe-page-main/scss/_base.scss
+++ b/recipe-page-main/scss/_base.scss
@@ -1,6 +1,25 @@
 // You can include normalize.css here if you're using it:
 // @import "normalize"; // Or the path to your normalize.css file
 @import "/css/normalize.css";
+
+// Young Serif Regular
+@font-face {
+    font-family: 'Young Serif';
+    src: url('../assets/fonts/young-serif/YoungSerif-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+// Outfit Variable Font
+@font-face {
+    font-family: 'Outfit';
+    src: url('../assets/fonts/outfit/Outfit-VariableFont_wght.ttf') format('truetype-variations');
+    font-weight: 100 900;
+    font-style: normal;
+    font-display: swap;
+}
+
 *, *::before, *::after {
     box-sizing: border-box;
   }
@@ -12,3 +31,4 @@
   body {
       font-size: 16px;
   }
+  
