--- a/recipe-page-main/scss/_typography.scss
+++ b/recipe-page-main/scss/_typography.scss
@@ -7,11 +7,16 @@ body {
   
   h1 {
     font-family: $font-family-serif;
-    font-size: $font-size-h1;
-    line-height: 100%;
+    font-size: $font-size-h1-mobile; // Use the mobile-specific font size
+    line-height: 100%; // (or you can use a mixin for line-height, see below)
     letter-spacing: 0px;
-    font-weight: $font-weight-regular;
+    font-weight: $font-weight-regular; // 400
     color: $color-stone-900;
+    @include line-height(100%);
+  
+    @include breakpoint(tablet) {
+      font-size: $font-size-h1; // Use a different font size for larger screens, if needed
+    }
   }
   
   h2 {
