--- a/recipe-page-main/style.css
+++ b/recipe-page-main/style.css
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
 }
-
+ 
 /* Custom Properties */
 :root {
   /* Colors */
@@ -18,6 +18,41 @@
   --stone-100: #F3EED7;
   --brown-800: #854A32;
   --white: #FFFFFF;
+
+/* Fonts */
+@font-face {
+  font-family: 'Young Serif';
+  src: url('/assets/fonts/young-serif/YoungSerif-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Outfit';
+  src: url('/assets/fonts/outfit/static/Outfit-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Outfit';
+  src: url('/assets/fonts/outfit/static/Outfit-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Outfit';
+  src: url('/assets/fonts/outfit/static/Outfit-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Existing code remains the same */
 
   /* Typography */
   --ff-young: 'Young Serif', serif;
